--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Creating tutorial application based on http://teropa.info/blog/2015/09/10/full-stack-redux-tutorial.html",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --recursive"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -16,11 +17,20 @@
     "url": "https://github.com/djedi-knight/full-stack-redux-tutorial/issues"
   },
   "homepage": "https://github.com/djedi-knight/full-stack-redux-tutorial#readme",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
+    "chai-immutable": "^1.6.0",
     "mocha": "^2.5.3"
+  },
+  "dependencies": {
+    "immutable": "^3.8.1"
   }
 }
